make ui for consultation

--- a/medical/templates/medical/index.html
+++ b/medical/templates/medical/index.html
@@ -9,6 +9,10 @@
     <h2>Test Create Consultation</h2>
     <form action="/medical/consultation/create/1" method="get">
        <button type="submit">Create Consultation forAppointment 1</button></form>
+
+</form>
+    
+ 
 </body>
 
 </html>
