--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -132,7 +132,7 @@
 
 <!-- TOP NAV -->
 <nav class="topnav">
-  <a class="brand" href="#">
+  <a class="brand" href="{% block brand_url %}#{% endblock %}">
     <div class="brand-icon">
       <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 14h-2v-4H7v-2h4V6h2v4h4v2h-4v4z"/></svg>
     </div>
