--- a/accounts/templates/registration/edit_profile.html
+++ b/accounts/templates/registration/edit_profile.html
@@ -374,7 +374,7 @@
 
         <div class="form-actions">
           <button type="submit" class="btn btn-primary">Update Profile</button>
-          <a href="{% url 'profile' %}" class="btn btn-secondary">Cancel</a>
+          <a href="{% if redirect_to %}{{ redirect_to }}{% else %}{% url 'profile' %}{% endif %}" class="btn btn-secondary">Cancel</a>
         </div>
       </form>
     </div>
